fix(showcase): dribble icon was outside the shot name boundaries (not visible)

--- a/src/pages/showcase/components/ShotTitle/index.module.scss
+++ b/src/pages/showcase/components/ShotTitle/index.module.scss
@@ -1,6 +1,12 @@
 .shot-title {
 
+  display: flex;
+  align-items: center;
+
   > .shot-link {
-    margin-right: 10px;
+    // Without this the `a` element won't be the same height as the icon (caused by antd card)
+    line-height: 1;
+
+    margin-right: 5px;
   }
 }
